// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate meta tags correctly 1`] = `
[
  {
    "attributes": {
      "content": "This is basic meta",
      "name": "description",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
  {
    "attributes": {
      "content": "bar",
      "name": "bar",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
  {
    "attributes": {
      "content": "foo",
      "name": "foo",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
]
`;

exports[`should generate meta tags correctly 2`] = `
[
  {
    "attributes": {
      "content": "This is about page",
      "name": "description",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
  {
    "attributes": {
      "content": "bar",
      "name": "bar",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
  {
    "attributes": {
      "content": "foo",
      "name": "foo",
    },
    "meta": {},
    "tagName": "meta",
    "voidTag": true,
  },
]
`;
